# playground

./: .gitignore  CMakeLists.txt  README.md  build.sh  flake.nix  install.sh
configurator/: configurator.slint
docs/: ammonia.md  compilation.md  configurator.md  defaults.md  fangs.md  grant.md  pac_stripping.md
installer/: Distribution.xml  conclusion.html  welcome.html
syphon/: breakpoint.c  exe.c  main.c  options_loader.c  options_loader.h  syphon.h
